--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <a id="menu" href="#"></a>
         <nav>
             <ul class="navigation">
-                <li class="active"><a href = "#">Home</a></li>
-                <li><a href = "/chamber/index.html">Chamber</a></li>
+                <li class="active"><a href = "index.html">Home</a></li>
+                <li><a href = "chamber/index.html">Chamber</a></li>
                 <li><a href = "#">Site Plan</a></li>
                 <li><a href = "#">Form</a></li>
             </ul>
