--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
         <a id="menu" href="#"></a>
         <nav>
             <ul class="navigation">
-                <li class="active"><a href = "index.html">Home</a></li>
+                <li class="active"><a href = "wdd230/index.html">Home</a></li>
                 <li><a href = "#">Discover</a></li>
                 <li><a href = "#">Directory</a></li>
                 <li><a href = "#">Join</a></li>
