Added responsize images and a lazyload file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                         <a href="week2/design.html">Design Principles</a> | Favicon | Social Media Meta | 
                         <a href="week2/bom.html">BOM Top 10</a>
                     </li>
-                    <li>Week 03: <a href="week3/images/landscape.webp">WebP</a></li>
+                    <li>Week 03: 
+                        <a href="week3/images/landscape.webp">WebP</a>
+                        <a href="week3/responsize-images.html">Responsive Images</a>
+                    </li>
                     <li>Week 04: <a> </a></li>
                     <li>Week 05: <a> </a></li>
                     <li>Week 06: <a> </a></li>
