Added Web Storage API

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li>Week 03: 
                         <a href="week3/images/landscape.webp">WebP</a>
                         <a href="week3/responsize-images.html">Responsive Images</a>
+                        <a href="week3/bom.html">Web Storage API</a>
                     </li>
                     <li>Week 04: <a> </a></li>
                     <li>Week 05: <a> </a></li>
