--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         <a href="week2/bom.html">BOM Top 10</a>
                     </li>
                     <li>Week 03: 
-                        <a href="week3/images/landscape.webp">WebP</a>
-                        <a href="week3/responsize-images.html">Responsive Images</a>
+                        <a href="week3/images/landscape.webp">WebP |</a>
+                        <a href="week3/responsize-images.html">Responsive Images |</a>
                         <a href="week3/bom.html">Web Storage API</a>
                     </li>
                     <li>Week 04: <a> </a></li>
