Home Page Enhancements

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         </nav>
     </div>
     <main>
+        <div class="hero">
+            <picture>
+                <source media="(max-width: 500px)" srcset="week3/images/hero-small.webp">
+                <source media="(max-width: 1000px)" srcset="week3/images/hero-medium.webp">
+                <img src="week3/images/hero-large.webp" alt="Hero Image" >
+            </picture>
+            <span>Boise Idaho Temple</span>
+        </div>
         <h1>WDD 230: Web Frontend Development</h1>
         <div>
             <section class="card">
@@ -64,6 +72,9 @@
                 </ul>
             </section>
         </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23198.567428067792!2d-112.15462849440055!3d43.38076819278832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5354f8e56d98f58f%3A0xc7a79ff19600cbec!2sShelley%2C%20ID%2083274!5e0!3m2!1sen!2sus!4v1715295476647!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>    
     </main>
     <footer>
         <p>© 2024. Noah Kristopher Carlisle USA.<img src="images/usa-flag.png" alt="USA Flag" width="50" height="26"></p>
