--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -18,36 +18,14 @@
         <nav>
             <ul class="navigation">
                 <li class="active"><a href = "wdd230/index.html">Home</a></li>
-                <li><a href = "discover.html">Discover</a></li>
+                <li><a href = "#">Discover</a></li>
                 <li><a href = "#">Directory</a></li>
                 <li><a href = "#">Join</a></li>
             </ul>
         </nav>
     </div>
     <main>
-        <div class="hero">
-            <img src="images/Screenshot 2024-05-03 131134.png" alt="Hero Image">
-            <button type="button">Join Now</button>
-        </div>
-        <div class="card">
-            <section>
-                <h2>Current Events</h2>
-            </section>
-            <section>
-                <h2>Weather</h2>
-            </section>
-            <section class="spotligts">
-                <section>
-                    <h2>Company Advertisement 1</h2>
-                </section>
-                <section>
-                    <h2>Company Advertisement 2</h2>
-                </section>
-                <section>
-                    <h2>Company Advertisement 3</h2>
-                </section>
-            </section>
-        </div>
+        
     </main>
     <footer>
         <p>Noah Kristopher Carlisle</p>
