--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="week3/responsize-images.html">Responsive Images</a> |
                         <a href="week3/bom.html">Web Storage API</a>
                     </li>
-                    <li>Week 04: <a> </a></li>
+                    <li>Week 04: <a href="https://codepen.io/Noah-Carlisle/pen/ZENGrBE">Pseudo Classes</a></li>
                     <li>Week 05: <a> </a></li>
                     <li>Week 06: <a> </a></li>
                 </ul>
