--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                         <a href="week3/responsize-images.html">Responsive Images</a> |
                         <a href="week3/bom.html">Web Storage API</a>
                     </li>
-                    <li>Week 04: <a href="https://codepen.io/Noah-Carlisle/pen/ZENGrBE">Pseudo Classes</a></li>
+                    <li>Week 04: 
+                        <a href="https://codepen.io/Noah-Carlisle/pen/ZENGrBE">Pseudo Classes</a> |
+                        <a href="week4/images/Screenshot 2024-05-14 131505.png">Exercises Complete</a> |
+                        <a href="week4/tablebuild.html">Tables</a>
+                    </li>
                     <li>Week 05: <a> </a></li>
                     <li>Week 06: <a> </a></li>
                 </ul>
