Added JSON file

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         <a href="week4/images/Screenshot 2024-05-14 131505.png">Exercises Complete</a> |
                         <a href="week4/tablebuild.html">Tables</a>
                     </li>
-                    <li>Week 05: <a> </a></li>
+                    <li>Week 05: 
+                        <a href="week5/new-ward.members.json">JSON</a> |
+                    </li>
                     <li>Week 06: <a> </a></li>
                 </ul>
             </section>
