--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     </li>
                     <li>Week 05: 
                         <a href="week5/new-ward.members.json">JSON</a> |
+                        <a href="week5/prophets.html">Latter-day Prophets</a> |
                     </li>
                     <li>Week 06: <a> </a></li>
                 </ul>
@@ -74,6 +75,14 @@
                 <h2>Information</h2>
                 <ul>
                     <li><a>Idaho, USA</a></li>
+                    <li><a>
+                        <div class="weather">
+                            <h3 id="town"></h3>
+                            <img id="graphic" src="" at="">
+                            <p id="temp"></p>
+                        </div></a>
+                    </li>
+                    <li><a><p id="desc"></p></a></li>
                     <li><a>Page visits: <span id="visits"></span></a></li>
                 </ul>
             </section>
@@ -86,7 +95,8 @@
         <p>© 2024. Noah Kristopher Carlisle USA.<img src="images/usa-flag.png" alt="USA Flag" width="50" height="26"></p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getDates.js"></script>
 </body>
+<script src="scripts/getDates.js"></script>
 <script src="scripts/HomePage.js"></script>
+<script src="scripts/weather.js"></script>
 </html>
