working on showing the weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,6 +35,11 @@
             </section>
             <section>
                 <h2>Weather</h2>
+                <div class="weather">
+                    <img id="graphic" src="" at="">
+                    <h3 id="desc"></h3>
+                    <h3 id="temp"></h3>
+                </div>
             </section>
             <section class="spotligts">
                 <section>
@@ -55,4 +60,5 @@
         <p>+999-999-9999</p>
     </footer>
 </body>
+<script src="scripts/weather.js"></script>
 </html>
